WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100739
[CSS] Expand -webkit-line-break value space
https://bugs.webkit.org/show_bug.cgi?id=100739
Summary
[CSS] Expand -webkit-line-break value space
Glenn Adams
Reported
2012-10-30 03:42:53 PDT
(1) expand -webkit-line-break to include new values defined by CSS3 Text [1], i.e., 'auto', 'strict', 'loose'; (2) change default (initial) value for -webkit-line-break to 'auto' to match CSS3 Text; (3) rename enum EKHTMLLineBreak to LineBreak, renaming enum values appropriately; this bug is a sub-division of
bug 89235
, and prepares the way for committing a patch thereto [1]
http://dev.w3.org/csswg/css3-text/#line-break
Attachments
Patch
(19.97 KB, patch)
2012-10-30 04:29 PDT
,
Glenn Adams
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Glenn Adams
Comment 1
2012-10-30 04:29:46 PDT
Created
attachment 171418
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-10-30 11:00:32 PDT
Comment on
attachment 171418
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=171418&action=review
> Source/WebCore/rendering/style/StyleRareInheritedData.cpp:74 > - , khtmlLineBreak(LBNORMAL) > + , lineBreak(LineBreakAuto)
Do we need to change the code which depends on this value? Is our linebreaking still correct?
Glenn Adams
Comment 3
2012-10-30 12:49:08 PDT
(In reply to
comment #2
)
> (From update of
attachment 171418
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=171418&action=review
> > > Source/WebCore/rendering/style/StyleRareInheritedData.cpp:74 > > - , khtmlLineBreak(LBNORMAL) > > + , lineBreak(LineBreakAuto) > > Do we need to change the code which depends on this value? Is our linebreaking still correct?
No change needed. There is actually no code that explicitly refers to LBNORMAL (now LineBreakAuto). I believe we're safe to c+ this.
Eric Seidel (no email)
Comment 4
2012-10-30 12:56:57 PDT
Comment on
attachment 171418
[details]
Patch OK. THanks. I really appreciate you breaking this up, it makes it easier to handle the reviews. Please feel encouraged to CC me on future patches.
WebKit Review Bot
Comment 5
2012-10-30 13:31:29 PDT
Comment on
attachment 171418
[details]
Patch Clearing flags on attachment: 171418 Committed
r132942
: <
http://trac.webkit.org/changeset/132942
>
WebKit Review Bot
Comment 6
2012-10-30 13:31:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug